# Zenny_AI-Phase_1_V2

Zenny-AI-Phase-1-V2/: to-do.txt
Zenny-AI-Phase-1-V2/scripts/infrastructure/: docker-compose.yml  nginx-n8n.conf
Zenny-AI-Phase-1-V2/scripts/n8n-workflows/: zendesk-ticket-create.json
Zenny-AI-Phase-1-V2/scripts/testing/: test-connection.sh  test-eval.sh  (+1 more)
Zenny-AI-Phase-1-V2/zenny-core-v2/: INSTALL_GUIDE_b1.md  README.md  pyproject.toml  railway.json
Zenny-AI-Phase-1-V2/zenny-core-v2/src/api/: admin.py  routes.py  webhook.py
Zenny-AI-Phase-1-V2/zenny-core-v2/src/channels/: __init__.py  web.py
Zenny-AI-Phase-1-V2/zenny-core-v2/src/evals/: __init__.py  suite.py
Zenny-AI-Phase-1-V2/zenny-core-v2/src/integrations/: __init__.py  shopify.py  stripe.py  woocommerce.py  zendesk.py
Zenny-AI-Phase-1-V2/zenny-core-v2/src/services/: llm_router.py  pii_redactor.py  prompt_manager.py  rag.py  state_manager.py
Zenny-AI-Phase-1-V2/zenny-core-v2/tests/: conftest.py  test_evals.py  test_pii_redactor.py  test_policy_guard.py
docs/: AI_WORKFLOW.md  GUIDE.md  SYSTEM.md  ZENNY_LOG.md  Zenny_AI_Detailed_Remediation_Plan_v1.1.md
scripts/infrastructure/: hetzner-setup.sh
scripts/n8n-workflows/: gcal-find-slots.json  shopify-order-lookup.json  slack-notify.json  stripe-refund.json
scripts/testing/: test-shopify.sh
zenny-core-v2/: INSTALL_GUIDE_b2.md  Procfile  env.example  supabase-setup.sql
zenny-core-v2/src/: __init__.py  config.py  main.py  types.py
zenny-core-v2/tests/: __init__.py  test_channels.py  test_health.py  test_integrations.py  test_state_manager.py
(+15 files in other folders)
