[tool.poetry]
name = "zenny-core"
version = "2.1.0"
description = "Zenny AI Core API - Python/FastAPI"
authors = ["ZeroManual Team <team@zeromanual.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
gunicorn = "^23.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
supabase = "^2.5.0"
google-generativeai = "^0.7.0"
openai = "^1.35.0"
pyyaml = "^6.0.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
